--- a/assignment6a/mainstyle.css
+++ b/assignment6a/mainstyle.css
@@ -9,6 +9,10 @@
   padding: 0;
 }
 
+body {
+  background-color: #FFF6ED;
+}
+
 .nav {
   list-style-type: none;
   position: fixed;
@@ -86,7 +90,7 @@ li a {
 
 .featured {
   font-family: 'Sanchez', serif;
-  font-size: 30px;
+  font-size: 40px;
   margin: 150px 0 30px 60px;
 }
 
@@ -103,14 +107,15 @@ li a {
   border-radius: 8px;
   margin: 0 20px 20px 60px;
   box-shadow: 0 3px 8px #dddddd;
+  background-color: #ffffff;
 }
 
-/*img needs to float in cart but not elsewhere*/
+/*img does not need to float here but does in cart*/
 .cardimg {
   max-width: 300px;
   overflow: hidden;
   text-indent: -18%;
-  margin: 20px 0 0 20px;
+  margin: 20px 20px 0 20px;
   float: left;
 }
 
@@ -228,17 +233,14 @@ li a {
 
 /*set style for cart item cards*/
 .cartProductCard {
-  width: 60%;
+  width: 75%;
+  height: 306px;
   grid-area: 1 / 1 / 1 / span 2;
   border: 1px solid #E4D5C7;
   border-radius: 8px;
   margin: 0 20px 20px 60px;
   box-shadow: 0 3px 8px #dddddd;
-}
-
-/*set inner grid of cart item card*/
-.cartCardInnerGrid {
-
+  background-color: #ffffff;
 }
 
 .cartCardImg {
@@ -248,7 +250,17 @@ li a {
 .cartCardTitle {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
+  font-size: 30px;
+  margin: 0px 0px 5px 18px;
+  padding-top: 20px;
+}
+
+.cartCardInfo {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
   font-size: 20px;
-  margin: 5px 0px 5px 18px;
-  float: left;
+  color: grey;
+  margin: 0px 0px 5px 18px;
+  padding-top: 20px;
+
 }
