--- a/assignment6a/mainstyle.css
+++ b/assignment6a/mainstyle.css
@@ -270,8 +270,8 @@ li a {
   grid-gap: 10px;
 }
 
-/*set each div to its own section of grid*/
-#button1 {
+/*set buttons overall style*/
+.buttons {
   font-family: 'Open Sans', sans-serif;
   font-weight: 200;
   font-size: 20px;
@@ -280,70 +280,29 @@ li a {
   border-radius: 8px;
   background-color: #ffffff;
   text-align: center;
+  width: 200px;
+  height: 60px;
+}
+
+/*set buttons in grid*/
+.buttongrid1 {
   grid-column: 1 / span 1;
-  width: 200px;
-  height: 60px;
 }
 
-#button1:hover {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 2px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
-  grid-column: 1 / span 1;
-  width: 200px;
-  height: 60px;
-  box-shadow: 0 3px 8px #dddddd;
-}
-
-#button2 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 1px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
+.buttongrid2 {
   grid-column: 2 / span 1;
-  width: 200px;
-  height: 60px;
 }
 
-#button2:hover {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 2px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
-  grid-column: 2 / span 1;
-  width: 200px;
-  height: 60px;
-  box-shadow: 0 3px 8px #dddddd;
-}
-
-#button3 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 1px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
+.buttongrid3 {
   grid-column: 3 / span 1;
-  width: 200px;
-  height: 60px;
 }
 
-#button3:hover {
+.buttongrid4 {
+  grid-column: 4 / span 1;
+}
+
+/*set hover style*/
+.buttons:hover {
   font-family: 'Open Sans', sans-serif;
   font-weight: 200;
   font-size: 20px;
@@ -352,36 +311,6 @@ li a {
   border-radius: 8px;
   background-color: #ffffff;
   text-align: center;
-  grid-column: 3 / span 1;
-  width: 200px;
-  height: 60px;
-  box-shadow: 0 3px 8px #dddddd;
-}
-
-#button4 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 1px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
-  grid-column: 4 / span 1;
-  width: 200px;
-  height: 60px;
-}
-
-#button4:hover {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  border: 2px solid #E4D5C7;
-  padding: 8px 5px 5px 5px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  text-align: center;
-  grid-column: 4 / span 1;
   width: 200px;
   height: 60px;
   box-shadow: 0 3px 8px #dddddd;
