--- a/puifinal/styles.css
+++ b/puifinal/styles.css
@@ -37,13 +37,6 @@
   text-align: left;
 }
 
-/* set nav */
-.nav {
-  height: 40px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 200;
-}
-
 /* set style for hamburger menu */
 #menuContainer {
   cursor: pointer;
@@ -102,16 +95,19 @@ background: #1ce;
   font-weight: 500;
 }
 
+/* actual dropdown area */
 .dropdown {
   width: 100%;
   background-color: #043740;
   display: none;
 }
 
+/* holds dropdown text */
 .dropdownHolder {
   width: 40%;
   margin-left: 400px;
-  margin-top: 40px;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .headText {
@@ -126,6 +122,19 @@ background: #1ce;
 
 }
 
-.container {
-  width: 100%;
+.row {
+  height: 95px;
+  align: center;
+}
+
+.foodIcon {
+  height: 120px;
+  padding-left: 20%;
+  padding-right: 10%;
+  transition: transform .2s;
+  cursor: pointer;
+}
+
+.foodIcon:hover {
+  transform: scale(1.2)
 }
