--- a/puifinal/styles.css
+++ b/puifinal/styles.css
@@ -1,6 +1,6 @@
-/** {
+/* * {
   border: 1px solid red;
-}*/
+} */
 
 /* set slide out menu header style */
 .hamburgerHeader {
@@ -38,17 +38,18 @@
 }
 
 /* set style for hamburger menu */
-#menuContainer {
+/* #menuContainer {
   cursor: pointer;
-}
+} */
 
-.bar1, .bar2, .bar3 {
+/* hamburger menu bars */
+/* .bar1, .bar2, .bar3 {
   width: 30px;
   height: 3px;
   background-color: #333;
   margin: 6px 0;
   transition: 0.4s;
-}
+} */
 
 .menu, .menu2, .menu3 {
   height: 200px;
@@ -101,17 +102,14 @@ background: #1ce;
   width: 100%;
   background-color: #043740;
   display: none;
-  float: left;
-  position: absolute;
-  top: 0;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 /* holds dropdown text */
 .dropdownHolder {
   width: 40%;
   margin-left: 20%;
-  margin-top: 3%;
-  margin-bottom: 3%;
 }
 
 .headText {
